# mychat

./: CMakeLists.txt  apply_friend_dialog.cpp  apply_friend_dialog.h  apply_friend_item.cpp  apply_friend_item.h  apply_friend_list.cpp  apply_friend_list.h  apply_friend_widget.cpp  apply_friend_widget.h  apply_widget.h  auth_friend_dialog.cpp  auth_friend_dialog.h  chat_item_base.cpp  chat_item_base.h  chat_message_edit_widget.cpp  chat_message_edit_widget.h  chat_message_show_widget.cpp  chat_message_show_widget.h  chat_user_item.cpp  chat_user_item.h  chat_user_list.cpp  chat_user_list.h  chat_widget.cpp  chat_widget.h  chat_window.cpp  chat_window.h  const.h  friend_item.cpp  friend_item.h  friend_list.cpp  friend_list.h  group_tip_item.cpp  group_tip_item.h  login_dialog.cpp  login_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  message_item.cpp  message_item.h  (+18 more)
UI/bubble/: bubble_frame.cpp  bubble_frame.h  picture_bubble.cpp  picture_bubble.h  text_bubble.cpp  text_bubble.h
net/: http_mgr.cpp  http_mgr.h  tcp_mgr.cpp  tcp_mgr.h
style/: apply_friend_item.qss  chat_window.qss  login_dialog.qss  register_dialog.qss  stylesheet.qss
utils/: clicked_btn.cpp  clicked_btn.h  clicked_label.cpp  clicked_label.h  customize_edit.cpp  customize_edit.h  list_item_base.cpp  list_item_base.h  singleton.h  state_widget.cpp  state_widget.h  util.cpp  util.h
